code clean ups in XmppEndpoint